--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.7"
+    "firebase": "^9.22.0",
+    "moment": "^2.29.4",
+    "postcss": "^8.4.23",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-native": "^0.71.8",
+    "react-native-elements": "^3.4.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-safe-area-context": "^4.5.2",
+    "react-native-vector-icons": "^9.2.0",
+    "styled-components": "^6.0.0-rc.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
