--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
+    "expo-asset": "^8.9.1",
     "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.0",
